test(integration): move CompressionShowcase from perf to integration test
The original main class lived in the performance module but did no
benchmarking — just printed file sizes. Reframe as an integration test
with six assertions, one per representative column shape (monotonic
I64, low-card categorical, random F64, ALP-friendly F64, RLE I32,
high-card Utf8). Bounds are deliberately loose: catastrophic
regressions only, not 5 % drift.

Anchors the ratios documented in docs/explanation.md and catches a
silent encoding-choice regression (e.g. ALP giving up on slowly-
varying doubles) on every CI run.

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>